--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href=".mages/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="images/favicon/site.webmanifest">
     <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="images/favicon/favicon.ico">
@@ -17,14 +17,15 @@
     <title>Konstruct</title>
 </head>
 <body>
-    <header class="header">
-        <div class="header__bg"></div>
+    <header class="header__bg">
+        <div class="header">
         <a href="#" class="header__logo-link"><img src="./images/header-logo.png" alt="Konstruct" class="header__logo"></a>
             <div class="header__text">
-                <p class="header__text-title">PARTNER WITH KONSTUCT</p>
+                <p class="header__text-title">PARTNER WITH KONSTRUCT</p>
                 <p class="header__text-about">An award-winning construction management firm</p>
             </div>
         <a href="#DownBlock" class="header__scroll js-scroll">SCROLL DOWN</a>
+        </div>
     </header>
     <main>
         <section class="section__about">
@@ -83,11 +84,12 @@
                     </div>
                 </div>
         </section>
-        <section class="touch" id="DownBlock">
-            <div class="touch__bg"></div>
-            <div class="touch__flex">
-                <h1>Want to build something amazing?</h1>
-                <button class="touch__flex-button">GET IN TOUCH</button>
+        <section class="touch__bg" id="DownBlock">
+            <div class="touch">
+                <div class="touch__flex">
+                    <h1>Want to build something amazing?</h1>
+                    <button class="touch__flex-button">GET IN TOUCH</button>
+                </div>
             </div>
         </section>
         <section class="newsletter">
@@ -102,13 +104,12 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
-        <div class="footer__flex-titles">
+<!--         <div class="footer__flex-titles">
                 <h4>COMPANY</h4>
                 <h4>LINKS</h4>
                 <h4>CONTACT US</h4>
-        </div>
+        </div> -->
             <div class="footer__flex-list">
                     <div class="footer__flex_list-about">
                         <a href="#"><img src="./images/footer-logo.png" alt="Konstruct" class="footer__logo"></a>
